# omni

./: .actrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: common.yml
omni/: Cargo.toml  Dioxus.toml  build.rs
omni-rt/: Cargo.toml
omni-rt/crates/omni-bashkit/: Cargo.toml  moon.yml
omni-rt/crates/omni-bashkit/src/: lib.rs  zenfs_backend.rs
omni-rt/crates/omni-deepagents/: Cargo.toml  moon.yml
omni-rt/crates/omni-deepagents/src/: checkpoint_store.rs  config_store.rs  lib.rs  message_store.rs  mock_data.rs  model_registry.rs  run_store.rs  seed.rs  sse.rs  subagent_store.rs  thread_store.rs  title_generator.rs  todo_store.rs  wasm_api.rs  workspace_seed.rs
omni-rt/crates/omni-dock/: package-lock.json  package.json
omni-rt/crates/omni-dock/src/: omni-dock.ts
omni-rt/crates/omni-glue/: Cargo.toml  moon.yml
omni-rt/crates/omni-glue/src/: lib.rs
omni-rt/crates/omni-mdx/: package-lock.json  package.json
omni-rt/crates/omni-mdx/src/: omni-mdx.tsx
omni-rt/crates/omni-monaco/: package-lock.json  package.json
omni-rt/crates/omni-monaco/src/: omni-monaco.ts
omni-rt/crates/omni-pdfjs/: package-lock.json  package.json
omni-rt/crates/omni-pdfjs/src/: omni-pdfjs.ts
omni-rt/crates/omni-plyr/: package-lock.json  package.json
omni-rt/crates/omni-plyr/src/: omni-plyr.ts
omni-rt/crates/omni-popper/: package-lock.json  package.json  tsconfig.json
omni-rt/crates/omni-popper/src/: omni-popper.ts
omni-rt/crates/omni-pretext/: package-lock.json  package.json
omni-rt/crates/omni-pretext/src/: omni-pretext.ts
omni-rt/crates/omni-protocol/: Cargo.toml  build.rs  moon.yml
omni-rt/crates/omni-protocol/specs/: agent-protocol.json
omni-rt/crates/omni-protocol/src/: agent.rs  error.rs  lib.rs  message.rs  run.rs  store.rs  thread.rs
omni-rt/crates/omni-rt/: Cargo.toml
omni-rt/crates/omni-rt/src/: lib.rs
omni-rt/crates/omni-sw/: build.mjs  build.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
omni-rt/crates/omni-sw/src/: checkpointer.ts  omni-sw.ts  register.ts  store-api.ts  store-data.ts  store-mocks.ts
omni-rt/crates/omni-sw/src/agent/: runtime.ts  sandbox.ts
omni-rt/crates/omni-zenfs/: Cargo.toml  build.rs  moon.yml  package-lock.json  package.json
omni-rt/crates/omni-zenfs/src/: lib.rs  native.rs  omni-zenfs.ts  wasm.rs
omni-rt/specs/: agent-protocol.json
omni-ui/: Cargo.toml  Dioxus.toml  README.md  build.rs  moon.yml  omni-inference-client.js  package.json
omni-ui/assets/: main.css
omni-ui/omni/app/: omni-sw-register.js
omni-ui/src/: main.rs
omni-ui/src/components/: mod.rs
omni-ui/src/components/agent_rail/: mod.rs
omni-ui/src/components/chat/: mod.rs
omni-ui/src/components/kanban/: mod.rs
omni-ui/src/components/panels/: mod.rs
omni-ui/src/components/sidebar/: mod.rs
omni-ui/src/components/tabs/: mod.rs
omni-ui/src/components/tabs/viewers/: binary_viewer.rs  code_viewer.rs  docx_viewer.rs  html_viewer.rs  image_viewer.rs  markdown_viewer.rs  media_viewer.rs  mod.rs  pdf_viewer.rs  pptx_viewer.rs  spreadsheet_viewer.rs
omni-ui/src/components/ui/: mod.rs
omni-ui/src/lib/: file_types.rs  fixtures.rs  mod.rs  sw_api.rs  thread_context.rs  utils.rs
omni-ui/src/server/: assets.rs  bootstrap.rs  mod.rs  store_api.rs
omni-wc/: moon.yml  package-lock.json  package.json
omni-wc/.storybook/: main.ts  preview.ts
omni-wc/src/: omni-harness.stories.ts  omni-harness.ts
omni/assets/: main.css
omni/src/: main.rs  routes.rs
omni/src/components/: mod.rs
omni/src/components/chat/: mod.rs
omni/src/components/kanban/: mod.rs
omni/src/components/panels/: mod.rs
omni/src/components/sidebar/: mod.rs
omni/src/components/tabs/: mod.rs
omni/src/components/ui/: mod.rs
omni/src/lib/: mod.rs  thread_context.rs  utils.rs
