[package]
name = "omni-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.7.4", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
omni-rt = { path = "../omni-rt/crates/omni-glue" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
urlencoding = "2.1"
axum = { version = "0.8", optional = true, features = ["json", "query", "http1", "tokio"] }
tower-http = { version = "0.6", optional = true, features = ["cors"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CustomEvent", "Element", "MessageEvent", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web", "omni-rt/deepagents"]
desktop = ["dioxus/desktop", "omni-rt/native", "omni-rt/deepagents", "dep:axum", "dep:tower-http"]
mobile = ["dioxus/mobile"]
