[package]
name = "omni"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
omni-rt = { path = "../omni-rt/crates/omni-rt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
futures-util = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
