[package]
name = "omni-bashkit"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bashkit = { git = "https://github.com/everruns/bashkit" }
omni-zenfs = { path = "../omni-zenfs" }
async-trait = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
