[package]
name = "omni-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[build-dependencies]
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
