[package]
name = "omni-zenfs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", optional = true, features = ["fs", "io-util", "rt", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.4"

[features]
default = []
native = ["dep:tokio"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "36.0.0"
swc_ecma_visit = "21.0.0"
